[package]
name = "TishVPN"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
rcgen = "0.14.7"
rustls = {version = "0.23.38", features = ["ring"]}
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.14.1"
tokio = {version = "1.51.0", features = ["full"]}
tokio-rustls = "0.26.4"
#tokio = "1.51.0"
tokio-tun = "0.15.2"
webpki-roots = "1.0.7"
x509-parser = "0.18.1"
